--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,20 @@ attrs==24.2.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blinker==1.8.2
 certifi==2024.8.30
 charset-normalizer==3.3.2
+click==8.1.7
 decorator==5.1.1
 defusedxml==0.7.1
 docopt==0.6.2
 executing==2.1.0
 fastjsonschema==2.20.0
+Flask==3.0.3
 greenlet==3.0.3
 idna==3.8
 ipython==8.12.3
+itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
 jsonschema==4.23.0
@@ -47,6 +51,7 @@ pyzmq==26.2.0
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.20.0
+setuptools==74.1.2
 six==1.16.0
 soupsieve==2.6
 SQLAlchemy==2.0.34
@@ -54,8 +59,10 @@ stack-data==0.6.3
 tinycss2==1.3.0
 tornado==6.4.1
 traitlets==5.14.3
+typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 wcwidth==0.2.13
 webencodings==0.5.1
+Werkzeug==3.0.4
 yarg==0.1.9
